--- a/package.json
+++ b/package.json
@@ -3,16 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "test": "wdio run ./wdio.conf.js",
-    "wdio": "wdio run ./wdio.conf.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@wdio/cli": "^9.5.7",
+    "allure-commandline": "^2.32.0",
     "faker": "^6.6.6"
   },
   "devDependencies": {
@@ -25,10 +24,9 @@
     "@wdio/local-runner": "^9.5.7",
     "@wdio/mocha-framework": "^9.5.0",
     "@wdio/spec-reporter": "^9.5.0",
-    "@wdio/selenium-standalone-service": "^9.0.0",
     "@wdio/visual-service": "^6.3.0",
-    "allure-commandline": "^2.32.0",
     "eslint": "^9.18.0",
-    "eslint-plugin-wdio": "^9.4.4"
+    "eslint-plugin-wdio": "^9.4.4",
+    "wdio-selenium-standalone-service": "^0.0.12"
   }
 }
